--- a/awx/ui/client/features/projects/index.view.html
+++ b/awx/ui/client/features/projects/index.view.html
@@ -2,11 +2,10 @@
 <div ui-view="form"></div>
 <at-panel ng-cloak id="htmlTemplate">
     <div ng-if="$state.includes('projects')">
-        <at-panel-heading hide-dismiss="true">
-            {{:: vm.strings.get('list.PANEL_TITLE') }}
-            <div class="at-Panel-headingTitleBadge" ng-show="vm.count">
-                {{ vm.count }}
-            </div>
+        <at-panel-heading
+            title="{{:: vm.strings.get('list.PANEL_TITLE') }}"
+            hide-dismiss="true"
+            badge="{{ vm.count }}">
         </at-panel-heading>
     </div>
     <div ui-view="projectsList"></div>
